Update project description and enhance README for clarity on search algorithms
- Revise project description in pyproject.toml to specify the use of BM25 ranking and semantic search algorithms.
- Update README.md to reflect the new project description and clarify the functionality of the semantic search commands.
- Improve command descriptions for better user understanding of embedding generation and search capabilities.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,7 @@
 [project]
 name = "hoopla"
 version = "0.1.0"
-description = "Add your description here"
+description = "A movie search engine using BM25 ranking and semantic search algorithms"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "nltk==3.9.1",
-    "numpy>=2.3.4",
-    "sentence-transformers>=5.1.2",
-]
+dependencies = ["nltk==3.9.1", "numpy>=2.3.4", "sentence-transformers>=5.1.2"]
